# bifrost-trade-worker

./: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: migrate_engine_worker.py  migrate_engine_worker_tests.py  run_account_sync_daemon.py  run_celery.py  run_daemon.py  wait_for_data.py
scripts/systemd/: run_account_sync_daemon.py  run_celery.py
src/bifrost_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bifrost_worker/celery/: __init__.py  celery_app.py  celery_queue_names.py
src/bifrost_worker/daemon/: __init__.py  ib_edge.py  lease.py
src/bifrost_worker/daemon/account_sync/: app.py  diff_engine.py  heartbeat.py  redis_keys.py  stream_consumer.py
src/bifrost_worker/daemon/app/: __init__.py  contract_quote_live.py  control_heartbeat.py  daemon_handlers.py  entry.py  gs_trading.py  hedge_flow.py  snapshot.py  ticker_redis.py
src/bifrost_worker/daemon/core/: __init__.py  logging_utils.py
src/bifrost_worker/daemon/execution/: order_manager.py
src/bifrost_worker/daemon/fsm/: __init__.py  (+3 more)
tests/: conftest.py  test_black_scholes.py  test_celery_capabilities.py  test_celery_supported_tasks.py  test_celery_worker_pool_argv.py  test_daemon_fsm_coverage.py  test_daemon_lease.py  test_daemon_order_safety.py  test_gamma_scalper.py  test_gs_trading_fsm.py  test_guards.py  test_hedge_flow.py  test_hedge_fsm.py  test_hedge_gate.py  test_massive_celery_queues.py  test_massive_client.py  test_massive_job_goal.py  test_risk_guard.py  test_state.py  test_state_classifier.py  test_trading_fsm.py  test_wait_for_data.py
(+31 files in other folders)
