[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-worker"
version = "0.1.0"
description = "Trading daemon and Celery workers — Bifrost Trade system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bifrost-core",
    "celery[redis]>=5.3.0",
    "flower>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
markers = [
    "ib: mark test as requiring live IB connection (deselect with '-m not ib')",
    "db: mark test as requiring live PostgreSQL connection",
]

[tool.ruff]
line-length = 100
target-version = "py311"
